# ceraii

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  dummy.c
ceraii/: CMakeLists.txt
examples/: example.c
src/: CMakeLists.txt  ceraii.c  ceraii.h
tests/: basic.c  main.c  multi_threads.c
